apps/generic/overlays/immich/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 4
              memory: 8Gi
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/immich/
            - name: main-volume
              mountPath: /media
              subPath: public/Pictures/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
