apps/generic/overlays/immich/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: http
