apps/generic/overlays/immich/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    forecastle.stakater.com/appName: "Immich"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://immich.app/img/logo.svg"
